fix avatar alignment issues

--- a/src/main.css
+++ b/src/main.css
@@ -455,11 +455,7 @@
   }
   /* GitHub Bug: Fix alignment of avatars in box headers */
   .Box-header .Details .ml-n1 {
-    margin-left: 0 !important;
-    margin-right: -8px !important;
-  }
-  .Box-header .Details .mt-n1 {
-    margin-top: 0 !important;
+    margin-right: -4px !important;
   }
   /* GitHub Bug: Vertically center ... expander in box headers */
   .Box-header .Details .ellipsis-expander {
